--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,7 @@ Homepage: http://www.chromium.org/Home
 Build-Depends:
  debhelper (>= 9),
  git,
+ gooroom-security-utils,
  python3,
  pkg-config,
  ninja-build,
