--- a/debian/control
+++ b/debian/control
@@ -8,9 +8,10 @@ Vcs-Git: git://anonscm.debian.org/pkg-chromium/pkg-chromium.git
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-chromium/pkg-chromium.git
 Homepage: http://www.chromium.org/Home
 Build-Depends:
- debhelper (>= 9),
  git,
  gooroom-security-utils,
+ debhelper (>= 11),
+ devscripts (>= 2.18.9),
  python3,
  pkg-config,
  ninja-build,
@@ -33,13 +34,14 @@ Build-Depends:
  libegl1-mesa-dev,
  libgles2-mesa-dev,
  mesa-common-dev,
+ libva-dev,
  libxt-dev,
  libre2-dev,
  libgbm-dev,
  libpng-dev,
  libxss-dev,
  libelf-dev,
- libvpx-dev,
+ libvpx-dev (>= 1.7.0),
  libpci-dev,
  libcap-dev,
  libdrm-dev,
@@ -52,12 +54,11 @@ Build-Depends:
  libopus-dev,
  libwebp-dev,
  libxtst-dev,
- libsrtp-dev,
  libjpeg-dev,
  libxml2-dev,
  libgtk-3-dev,
- libgtk2.0-dev,
  libxslt1-dev,
+ liblcms2-dev,
  libpulse-dev,
  libpam0g-dev,
  libsnappy-dev,
@@ -66,27 +67,23 @@ Build-Depends:
  libavformat-dev,
  libglib2.0-dev,
  libasound2-dev,
- libsqlite3-dev,
  libjsoncpp-dev,
  libspeechd-dev (>= 0.8.4),
  libminizip-dev,
  libhunspell-dev,
- libharfbuzz-dev (>= 1.2.7),
+ libharfbuzz-dev (>= 2.1.1),
  libusb-1.0-0-dev,
  libopenjp2-7-dev,
  libmodpbase64-dev,
- libgnome-keyring-dev,
  libnss3-dev (>= 3.12.3),
  libnspr4-dev (>= 2:4.9),
  libcups2-dev (>= 1.5.0),
  libevent-dev (>= 1.4.13),
  libjs-jquery,
- libjs-excanvas,
  libjs-jquery-flot,
  libgcrypt20-dev,
  fonts-ipafont-gothic,
  fonts-ipafont-mincho,
-Standards-Version: 3.9.8
 
 Package: gooroom-browser
 Architecture: i386 amd64 arm64 armhf
