Change string 'gooroom 웹 브라우저' to '구름 브라우저' on gooroom-browser.desktop

--- a/debian/gooroom-browser.desktop
+++ b/debian/gooroom-browser.desktop
@@ -13,7 +13,7 @@ Name[hu]=Chromium webböngésző
 Name[id]=Peramban Web Chromium
 Name[it]=Browser web Chromium
 Name[ja]=Chromium ウェブ・ブラウザ
-Name[ko]=Gooroom 웹 브라우저
+Name[ko]=구름 브라우저
 Name[pt_BR]=Chromium Navegador da Internet
 Name[ru]=Веб-браузер Chromium
 Name[sl]=Chromium spletni brskalnik
