--- a/debian/control
+++ b/debian/control
@@ -12,6 +12,8 @@ Build-Depends:
  debhelper (>= 11),
  devscripts (>= 2.18.9),
  git,
+ libssl-dev,
+ python3-dev,
  python3,
  pkg-config,
  ninja-build,
