--- a/debian/rules
+++ b/debian/rules
@@ -144,6 +144,7 @@ override_dh_auto_configure:
 
 override_dh_auto_build-arch: out/Release/gn
 	git apply debian/patches/gooroom/0011-Put-gooroom-logo-into-the-browser.patch
+	git apply debian/patches/gooroom/0079-Change-gooroom-logo-upto-gooroom-browser-2.3.0.patch
 	./out/Release/gn gen out/Release --args="$(defines)"
 	ninja -j$(njobs) -C out/Release gooroom-browser chrome_sandbox
 	cp out/Release/chrome_sandbox out/Release/chrome-sandbox
