Add dependence to jenkins build

--- a/debian/control
+++ b/debian/control
@@ -11,6 +11,8 @@ Rules-Requires-Root: no
 Build-Depends:
  debhelper (>= 11),
  devscripts (>= 2.18.9),
+ lld,
+ clang,
  git,
  libssl-dev,
  python3-dev,
