--- a/debian/control
+++ b/debian/control
@@ -18,6 +18,7 @@ Build-Depends:
  libssl-dev,
  python3-dev,
  libgtk2.0-dev,
+ python2,
  python3,
  pkg-config,
  ninja-build,
@@ -38,6 +39,7 @@ Build-Depends:
  xfonts-base,
  libglewmx-dev,
  libgl1-mesa-dev,
+ libx11-xcb-dev,
  libglu1-mesa-dev,
  libegl1-mesa-dev,
  libgles2-mesa-dev,
@@ -80,6 +82,7 @@ Build-Depends:
  libminizip-dev,
  libhunspell-dev,
  libharfbuzz-dev (>= 2.1.1),
+ libxcb-dri3-dev,
  libusb-1.0-0-dev,
  libopenjp2-7-dev,
  libmodpbase64-dev,
