--- a/debian/control
+++ b/debian/control
@@ -13,6 +13,8 @@ Rules-Requires-Root: no
 Build-Depends:
  debhelper (>= 11),
  devscripts (>= 2.18.9),
+ git,
+ libssl-dev,
  lld,
  clang,
  clang-format,
